--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <section class="header-bg">
                
         <div class="l">
+            <h2>Namoz vaqtlari</h2>
             <span class="loader"></span>
             <h5>created by baxa.ake </h5>
         </div>
